@@ -27,9 +27,9 @@
  *  DISCLAIMED. This includes but is not limited to warranties of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  *
- * $Revision: 1.6 $
+ * $Revision: 1.7 $
  * $Author: dannysmith $
- * $Date: 2001-11-29 04:26:33 $
+ * $Date: 2001-12-02 09:14:06 $
  *
  */
 
@@ -137,7 +137,11 @@
 #define	_PC_53		0x00010000
 #define	_PC_64		0x00000000
 
+/* These are also defined in Mingw math.h, needed to work around
+   GCC build issues.  */
 /* Return values for fpclass. */
+#ifndef __MINGW_FPCLASS_DEFINED
+#define __MINGW_FPCLASS_DEFINED 1
 #define	_FPCLASS_SNAN	0x0001	/* Signaling "Not a Number" */
 #define	_FPCLASS_QNAN	0x0002	/* Quiet "Not a Number" */
 #define	_FPCLASS_NINF	0x0004	/* Negative Infinity */
@@ -148,6 +152,7 @@
 #define	_FPCLASS_PD	0x0080	/* Positive Denormal */
 #define	_FPCLASS_PN	0x0100	/* Positive Normal */
 #define	_FPCLASS_PINF	0x0200	/* Positive Infinity */
+#endif /* __MINGW_FPCLASS_DEFINED */
 
 /* invalid subconditions (_SW_INVALID also set) */
 #define _SW_UNEMULATED		0x0040  /* unemulated instruction */
